# vita-headers

./: .gitignore  .travis.yml  CNAME  Doxyfile  DoxygenLayout.xml  LICENSE.MD  Mainpage_8dox.html  README.md  acmgr_8h.html  acmgr_8h.js  acmgr_8h_source.html  address__space_8h.html  address__space_8h.js  address__space_8h_source.html  adhoc__matching_8h.html  adhoc__matching_8h.js  adhoc__matching_8h_source.html  aimgr_8h.html  aimgr_8h.js  aimgr_8h_source.html  align_8h.html  align_8h_source.html  annotated.html  annotated_dup.js  appmgr_8h.html  appmgr_8h.js  appmgr_8h_source.html  apputil_8h.html  apputil_8h.js  apputil_8h_source.html  atomic_8h.html  atomic_8h.js  atomic_8h_source.html  atrac_8h.html  atrac_8h.js  atrac_8h_source.html  audiodec_8h.html  audiodec_8h.js  audiodec_8h_source.html  audioenc_8h.html  (+2433 more)
.travis.d/: db_build.sh  db_merge.py  db_schema.yml  definition_check.py  definition_ordering.py  definition_ordering.sh  deploy_docs.sh  download_external_apps.sh  download_external_libs.sh  download_sdk.sh  last_built_toolchain.py  sort_function_names.py
check_nid_compat/: CMakeLists.txt  exports.yml  main.c
check_nid_compat/363/: CMakeLists.txt
check_size/: CMakeLists.txt  defs.h  export_kernel.yml  export_user.yml  includes_all.py  psp2all.c  psp2kernel.c  psp2user.c
check_size/check_363/: CMakeLists.txt
db/: SceDTrace.yml  SceDeci4pDbgp.yml  SceDeci4pUserp.yml  ScePamgr.yml  ScePerf.yml  SceRazorCapture.yml  SceRazorHud.yml  db_devkit.yml
docs/: Doxyfile  DoxygenLayout.xml  Mainpage.dox  definitions.dox  definitions.h  footer.html  search.js
html/: Mainpage_8dox.html  align_8h.html  align_8h_source.html  annotated.html  annotated_dup.js  appmgr_8h.html  appmgr_8h.js  appmgr_8h_source.html  apputil_8h.html  apputil_8h.js  apputil_8h_source.html  atrac_8h.html  atrac_8h_source.html  audiodec_8h.html  audiodec_8h.js  audiodec_8h_source.html  audioenc_8h.js  audioenc_8h_source.html  audioin_8h.html  audioin_8h_source.html  audioout_8h.html  audioout_8h_source.html  avconfig_8h.js  avplayer_8h.html  avplayer_8h_source.html  bgapputil_8h.html  bgapputil_8h_source.html  bt_8h.html  bt_8h.js  bt_8h_source.html  callback_8h_source.html  camera_8h.html  camera_8h.js  camera_8h_source.html  classes.html  clib_8h.html  clib_8h.js  clib_8h_source.html  common__dialog_8h_source.html  compat_8h.html  (+1018 more)
include/: Makefile.am  alloca.h  errno.h  malloc.h  math.h  setjmp.h  stdio.h  stdlib.h  string.h  time.h  vitasdk.h  vitasdkkern.h  wchar.h
include/ psp2/: vshbridge.h
include/c++/: stdexcept  streambuf
include/c++/bits/: basic_ios.h  basic_ios.tcc  basic_string.h  basic_string.tcc  c++config.h  ios_base.h  locale_facets.h  locale_facets.tcc
include/c++/ext/: new_allocator.h  rc_string_base.h  sso_string_base.h  throw_allocator.h
include/psp2/: .audioenc.h.swp  appmgr.h  apputil.h  atrac.h  audiodec.h  audioenc.h  audioin.h  audioout.h  avcodec.h  avconfig.h  avplayer.h  bgapputil.h  camera.h  clipboard.h  common_api.h  common_dialog.h  compat.h  ctrl.h  defs.h  display.h  dmac5.h  driveruser.h  error.h  export.s  fiber.h  fios2.h  fios2kernel.h  fios2kernel02.h  fpu.h  gps.h  gxm.h  gxt.h  hid.h  ime_dialog.h  import.S  incoming_dialog.h  jpeg.h  jpegarm.h  jpegenc.h  jpegencarm.h  (+61 more)
include/psp2/deci4p/: user.h
include/psp2/io/: devctl.h  dirent.h  fcntl.h  stat.h
include/psp2/kernel/: backtrace.h  clib.h  cpu.h  dmac.h  error.h  loadcore.h  modulemgr.h  openpsid.h  processmgr.h  rng.h  sysmem.h  threadmgr.h
include/psp2/kernel/threadmgr/: callback.h  cond.h  eventflag.h  lw_cond.h  lw_mutex.h  msgpipe.h  mutex.h  rwlock.h  semaphore.h  signal.h  thread.h  vfp.h
include/psp2/net/: adhoc_matching.h  http.h  net.h  net_syscalls.h  netctl.h
include/psp2/np/: common.h  mgr.h  np_common.h
include/psp2/paf/: graphics.h  misc.h  stdc.h
include/psp2common/: ctrl.h  defs.h  display.h  fios2.h  jpegenc.h  net.h  npdrm.h  power.h  types.h  udcd.h  usbd.h  usbserv.h
include/psp2common/kernel/: iofilemgr.h  modulemgr.h  msif.h  processmgr.h  rtc.h  sysmem.h  threadmgr.h
include/psp2kern/: appmgr.h  bt.h  coredump.h  ctrl.h  display.h  fios2.h  gpu_es4.h  idstorage.h  jpegenc.h  netps.h  npdrm.h  pfsmgr.h  post_ss_mgr.h  power.h  registrymgr.h  sblacmgr.h  sblaimgr.h  sblauthmgr.h  syscon.h  touch.h  types.h  uart.h  udcd.h  usbd.h  usbserial.h  usbserv.h  vfs.h
include/psp2kern/avcodec/: jpegenc.h
include/psp2kern/internal/: exfatfs.h  sdstor.h
include/psp2kern/io/: devctl.h  dirent.h  fcntl.h  stat.h
include/psp2kern/kernel/: acmgr.h  aimgr.h  authmgr.h  cpu.h  debug.h  debugled.h  dipsw.h  dmac.h  excpmgr.h  gcauthmgr.h  intrmgr.h  iofilemgr.h  modulemgr.h  msif.h  pm_mgr.h  proc_event.h  processmgr.h  rtc.h  sdif.h  sm_comm.h  ssmgr.h  suspend.h  sysclib.h  syscon.h  sysmem.h  sysroot.h  systimer.h  threadmgr.h  uart.h  usbserial.h  utils.h
include/psp2kern/kernel/cpu/: atomic.h  cache.h  corelock.h  mmu.h  ple.h  rw_spinlock.h  spinlock.h
include/psp2kern/kernel/gcauthmgr/: drm_bb.h  gc_auth.h
include/psp2kern/kernel/kbl/: kbl.h
include/psp2kern/kernel/sysmem/: address_space.h  data_transfers.h  fixedheap.h  heap.h  memtype.h  mmu.h  nameheap.h  uid_class.h  uid_entryheap.h  uid_guid.h  uid_puid.h
include/psp2kern/kernel/threadmgr/: callback.h  cond.h  debugger.h  event_flags.h  fast_mutex.h  lw_cond.h  lw_mutex.h  misc.h  msg_pipe.h  mutex.h  semaphores.h  thread.h  vfp.h  workqueues.h
include/psp2kern/lowio/: dsi.h  gpio.h  i2c.h  iftu.h  pervasive.h  sdif.h
include/psp2kern/net/: net.h
include/sqlite/: sqlite3.h
include/sys/: stdio.h
include/vitasdk/: align.h  build_utils.h  utils.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+92 more)
(+207 files in other folders)
