# Copyright (C) 2015 PSP2SDK Project
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

nobase_include_HEADERS = psp2/export.s psp2/import.S	\
	psp2/io/devctl.h psp2/io/dirent.h psp2/io/fcntl.h psp2/io/stat.h	\
	psp2/net/http.h psp2/net/net.h psp2/net/netctl.h	\
	psp2/kernel/clib.h psp2/kernel/error.h psp2/kernel/modulemgr.h	\
	psp2/kernel/processmgr.h psp2/kernel/sysmem.h psp2/kernel/loadcore.h	\
	psp2/kernel/threadmgr.h psp2/audioenc.h psp2/audioin.h psp2/audioout.h	\
	psp2/appmgr.h psp2/apputil.h psp2/camera.h psp2/ctrl.h psp2/display.h	\
	psp2/fpu.h psp2/gxm.h psp2/moduleinfo.h psp2/motion.h psp2/pgf.h	\
	psp2/power.h psp2/rtc.h psp2/screenshot.h psp2/sysmodule.h	\
	psp2/system_param.h psp2/touch.h psp2/types.h psp2/pss.h	\
	c++/bits/os_defines.h c++/bits/time_members.h c++/bits/c++io.h	\
	c++/bits/atomic_word.h c++/bits/c++locale.h c++/bits/locale_facets.h	\
	c++/bits/locale_facets.tcc c++/bits/ctype_base.h c++/bits/stdc++.h	\
	c++/bits/gthr-default.h	c++/bits/messages_members.h	\
	c++/bits/gthr-single.h c++/bits/c++allocator.h c++/bits/gthr.h	\
	c++/bits/cpu_defines.h c++/bits/opt_random.h c++/bits/basic_file.h	\
	c++/bits/cxxabi_tweaks.h c++/bits/ctype_inline.h c++/bits/extc++.h	\
	c++/bits/gthr-posix.h c++/bits/error_constants.h c++/bits/stdtr1c++.h	\
	c++/bits/c++config.h c++/bits/basic_ios.h c++/bits/basic_ios.tcc	\
	c++/bits/basic_string.h c++/bits/basic_string.tcc c++/bits/ios_base.h	\
	c++/ext/new_allocator.h c++/ext/rc_string_base.h	\
	c++/ext/sso_string_base.h c++/ext/throw_allocator.h	\
	c++/stdexcept c++/streambuf sys/stdio.h	\
	alloca.h errno.h malloc.h math.h setjmp.h	\
	stdio.h stdlib.h string.h time.h wchar.h
